--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartGain – Intelligent Weight Gain Planner & Calorie Calculator</title>
-    <meta name="description" content="SmartGain helps you gain weight safely with personalized calorie plans, workouts, and nutrition intelligence." />
+    <title>SmartGain – Intelligent Weight Gain Planner & Calorie Calculator | 2026</title>
+    <meta name="description" content="SmartGain helps you gain weight safely with personalized calorie plans, workouts, and nutrition intelligence. Updated for 2026 with the latest nutrition science." />
     <meta name="keywords" content="weight gain, calorie calculator, TDEE, BMR, macro calculator, workout plan, nutrition, muscle building" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     
-    <meta property="og:title" content="SmartGain – Intelligent Weight Gain Planner" />
-    <meta property="og:description" content="Calculate personalized daily calories, macros, and workout plans for healthy weight gain based on science." />
+    <meta property="og:title" content="SmartGain – Intelligent Weight Gain Planner | 2026" />
+    <meta property="og:description" content="Calculate personalized daily calories, macros, and workout plans for healthy weight gain based on the latest 2026 nutrition science." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@SmartGain" />
-    <meta name="twitter:title" content="SmartGain – Intelligent Weight Gain Planner" />
-    <meta name="twitter:description" content="Science-backed calorie and macro calculations for healthy weight gain." />
+    <meta name="twitter:title" content="SmartGain – Intelligent Weight Gain Planner | 2026" />
+    <meta name="twitter:description" content="Science-backed calorie and macro calculations for healthy weight gain, updated with 2026 nutrition research." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
