added new files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>SmartGain – Intelligent Weight Gain Planner & Calorie Calculator | 2026</title>
     <meta name="description" content="SmartGain helps you gain weight safely with personalized calorie plans, workouts, and nutrition intelligence. Updated for 2026 with the latest nutrition science." />
     <meta name="keywords" content="weight gain, calorie calculator, TDEE, BMR, macro calculator, workout plan, nutrition, muscle building" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
     
     <meta property="og:title" content="SmartGain – Intelligent Weight Gain Planner | 2026" />
     <meta property="og:description" content="Calculate personalized daily calories, macros, and workout plans for healthy weight gain based on the latest 2026 nutrition science." />
